--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -11,6 +11,7 @@ COPY package.json .
 
 # Install application dependencies.
 RUN npm install
+RUN npm install axios
 
 # Copy the rest of the application files.
 COPY . .
